FIX: Loans page now fetches data from API the right way

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,9 +32,6 @@
 
           <div class="nav-links">
             <a class="active" href="dashboard.html">DASHBOARD</a>
-            <a href="apply_loan.html">APPLY</a>
-            <a href="loans.html">LOANS</a>
-            <a href="profile.html">PROFILE</a>
             <a id="logout">LOG OUT</a>
           </div>
         </div>
@@ -78,7 +75,7 @@
       <p>Copyright © 2019</p>
     </div>
   </div>
-  <script src="js/main.js"></script>
+  <script type="module" src="js/dashboard.js"></script>
 </body>
 
 </html>
