--- a/repayments.html
+++ b/repayments.html
@@ -73,9 +73,7 @@
       <p>Developed by Shonubi Oluwakorede - for Andela 44</p>
       <p>Copyright © 2019</p>
     </footer>
-    <script src="js/main.js"></script>
-    <script src="js/fetchers.js"></script>
-    <script src="js/repayments.js"></script>
+    <script type="module" src="js/repayments.js"></script>
   </body>
 
 </html>
