--- a/apply_loan.html
+++ b/apply_loan.html
@@ -47,7 +47,7 @@
         <div id="message" class="overlay">
           <div class="popup">
             <h2 id="mb_title"></h2>
-            <a id="mb_link" class="close" onclick="window.history(-1);" href="#">&times;</a>
+            <a id="mb_link" class="close" href="#">&times;</a>
             <div id="mb_msg" class="content">
 
             </div>
@@ -82,9 +82,7 @@
       <p>Developed by Shonubi Oluwakorede - for Andela 44</p>
       <p>Copyright © 2019</p>
     </footer>
-    <script src="js/main.js"></script>
-    <script src="js/fetchers.js"></script>
-    <script src="js/applyLoan.js"></script>
+    <script type="module" src="js/applyLoan.js"></script>
   </body>
 
 </html>
