--- a/signin.html
+++ b/signin.html
@@ -45,7 +45,7 @@
         <div id="message" class="overlay">
           <div class="popup">
             <h2 id="mb_title"></h2>
-            <a id="mb_link" class="close" onclick="window.history(-1);" href="#">&times;</a>
+            <a id="mb_link" class="close" href="#">&times;</a>
             <div id="mb_msg" class="content">
 
             </div>
@@ -83,9 +83,7 @@
         <p>Copyright © 2019</p>
       </footer>
     </div>
-    <script src="js/main.js"></script>
-    <script src="js/fetchers.js"></script>
-    <script src="js/signin.js"></script>
+    <script type="module" src="js/signin.js"></script>
   </body>
 
 </html>
