Setup loan repayment page to fetch API

--- a/edit_profile.html
+++ b/edit_profile.html
@@ -35,7 +35,7 @@
               <a href="apply_loan.html">APPLY</a>
               <a href="loans.html">LOANS</a>
               <a class="active" href="profile.html">PROFILE</a>
-              <a href="signin.html">LOG OUT</a>
+              <a id="logout">LOG OUT</a>
             </div>
           </div>
         </header>
