Setup admin sign in page
Admin can sign into the platform with the respective API endpoint
This commit also fix authorization issue. Initially, page finish loading before
the session is checked for  authorization. Now the session is checked for auth-
orization before the page loads.

--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <title>Dashboard | Quick Credit</title>
-    <link rel='shortcut icon' type='image/x-icon' href='./favicon.png' />
+    <title>Admin | Quick Credit</title>
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.png' />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
     <script src="./js/checks.js"></script>
 
   </head>
@@ -21,7 +21,7 @@
           <div class="nav">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
-              <a href="index.html"><img src="./assets/images/logo.png" /></a>
+              <a href="index.html"><img src="../assets/images/logo.png" /></a>
             </div>
             <div class="nav-btn">
               <label for="nav-check">
@@ -33,7 +33,7 @@
 
             <div class="nav-links">
               <a class="active" href="dashboard.html">DASHBOARD</a>
-              <a id="logout">LOG OUT</a>
+              <a href="signin.html">LOG OUT</a>
             </div>
           </div>
         </header>
@@ -42,19 +42,19 @@
         <section>
           <div class="centered-x text-center">
             <div>
-              <a href="apply_loan.html">
+              <a href="users.html">
                 <div class="dashboard-card-container">
                   <div class="dashboard-card">
-                    <h2><b>Apply for loan</b></h2>
-                    <p>Loan application</p>
+                    <h2><b>All Clients</b></h2>
+                    <p>View all client</p>
                   </div>
                 </div>
               </a>
               <a href="loans.html">
                 <div class="dashboard-card-container">
                   <div class="dashboard-card">
-                    <h2><b>View Loans</b></h2>
-                    <p>Loan repayments</p>
+                    <h2><b>All Loans</b></h2>
+                    <p>View all client loans</p>
                   </div>
                 </div>
               </a>
@@ -76,7 +76,7 @@
         <p>Copyright © 2019</p>
       </div>
     </div>
-    <script type="module" src="js/dashboard.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 
 </html>
