--- a/admin/signin.html
+++ b/admin/signin.html
@@ -7,11 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
     <title>Sign In | Quick Credit</title>
-    <link rel='shortcut icon' type='image/x-icon' href='./favicon.png' />
+    <link rel='shortcut icon' type='image/x-icon' href='../favicon.png' />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-    <link rel="stylesheet" type="text/css" href="css/preloader.css" />
-    <script src="./js/checks.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen" href="../css/main.css" />
+    <link rel="stylesheet" type="text/css" href="../css/preloader.css" />
+    <script src="../js/checks.js"></script>
+
   </head>
 
   <body class="form-body">
@@ -22,7 +23,7 @@
           <div class="nav">
             <input type="checkbox" id="nav-check">
             <div class="nav-header">
-              <a href="index.html"><img src="./assets/images/logo.png" /></a>
+              <a href="index.html"><img src="../assets/images/logo.png" /></a>
             </div>
             <div class="nav-btn">
               <label for="nav-check">
@@ -35,7 +36,6 @@
             <div class="nav-links">
               <a href="index.html">HOME</a>
               <a class="active" href="signin.html">SIGN IN</a>
-              <a href="signup.html">SIGN UP</a>
             </div>
           </div>
         </header>
@@ -70,8 +70,6 @@
                   <div class="signup-footer">
                     <button type="submit" class="btn-primary btn-primary-big">Sign In</button>
                   </div>
-
-                  <p>No account yet? <a href="signup.html">Sign up</a> for free</p>
                 </div>
               </form>
             </div>
@@ -83,7 +81,7 @@
         <p>Copyright © 2019</p>
       </footer>
     </div>
-    <script type="module" src="js/signin.js"></script>
+    <script type="module" src="../js/signin.js"></script>
   </body>
 
 </html>
