--- a/edit_profile.html
+++ b/edit_profile.html
@@ -10,6 +10,7 @@
     <link rel='shortcut icon' type='image/x-icon' href='./favicon.png' />
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+    <script src="./js/checks.js"></script>
 
   </head>
 
