--- a/loans.html
+++ b/loans.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/preloader.css" />
+    <script src="./js/checks.js"></script>
 
   </head>
 
